fix #5131 ~ align inbox with right side conversations list (#5134)

--- a/src/sass/components/sidebar/sidebar.scss
+++ b/src/sass/components/sidebar/sidebar.scss
@@ -41,7 +41,7 @@
         line-height: 16px;
         padding: 12px 0px 10px;
         text-decoration: none;
-        margin-bottom: 1em
+        margin-bottom: 15px
     }
 
     .sidebar-btn-compose > div,
